--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.26.9",
     "axios": "^0.19.2",
     "immutable": "^4.0.0-rc.12",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
